<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mountain_background"
    android:padding="24dp">

    <TextView
        android:id="@+id/timerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="30"
        android:textSize="48sp"
        android:textColor="@color/gray_blue"
        android:fontFamily="sans-serif-medium"
        android:layout_centerHorizontal="true"
        android:letterSpacing="0.1"/>

    <LinearLayout
        android:id="@+id/scoreContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timerText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/gray_blue"
            android:fontFamily="sans-serif-medium"/>
    </LinearLayout>

    <Button
        android:id="@+id/targetButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle_button"
        android:text="@string/tap_button"
        android:textColor="#FFFFFF"
        android:visibility="invisible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:layout_centerInParent="true"
        android:text="@string/btn_start"
        android:textSize="20sp"
        app:backgroundTint="@color/gray_blue"
        app:cornerRadius="30dp"
        app:elevation="4dp"
        app:rippleColor="@color/white"
        android:textColor="#FFFFFF"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_marginBottom="40dp"

        app:icon="@drawable/ic_play"
        app:iconGravity="textEnd"
        app:iconSize="30dp"/>


</RelativeLayout>